NIAD-2096: Fix PathwaysCase mapping